--- a/simpleRag/pyproject.toml
+++ b/simpleRag/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "chromadb>=1.3.4",
     "dotenv>=0.9.9",
     "fastapi>=0.115.0",
+    "httpx>=0.27.0",
     "ipynb>=0.5.1",
     "langchain>=1.0.5",
     "langchain-chroma>=1.0.0",
@@ -18,6 +19,7 @@ dependencies = [
     "langchain-ollama>=1.0.0",
     "langgraph>=1.0.2",
     "markdown>=3.10",
+    "pyjwt>=2.9.0",
     "unstructured>=0.18.18",
     "uvicorn>=0.34.0",
 ]
