--- a/Frontend/ios/Runner/Info.plist
+++ b/Frontend/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need microphone access for voice input</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need speech recognition for voice commands</string>
 </dict>
 </plist>
