--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -1,6 +1,6 @@
 name: baztami
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -27,7 +27,11 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   state_notifier: ^1.0.0
   flutter_slidable: ^4.0.3
-
+  elevenlabs_flutter_updated: ^0.0.1
+  audioplayers: ^6.5.1
+  speech_to_text: ^7.3.0
+  permission_handler: ^11.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -39,3 +43,4 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
