--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   build_runner: ^2.7.1
 
 flutter:
