--- a/simpleRag/pyproject.toml
+++ b/simpleRag/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "chromadb>=1.3.4",
+    "datasets>=4.4.2",
     "dotenv>=0.9.9",
     "fastapi>=0.115.0",
     "httpx>=0.27.0",
@@ -20,6 +21,7 @@ dependencies = [
     "langgraph>=1.0.2",
     "markdown>=3.10",
     "pyjwt>=2.9.0",
+    "ragas>=0.4.2",
     "unstructured>=0.18.18",
     "uvicorn>=0.34.0",
 ]
